examples/type_system/failing/20_direct_builtin_missing_effect.flx
// E400: direct builtin effect call inside a function with incompatible ambient effects.
//
// `tick` allows only Time, but `print` requires IO.

fn tick() -> Int with Time {
    print("tick")
    1
}

tick()
